--- a/Home Assignment 5/Code/LunarLanderDQN2025Assignment.ipynb
+++ b/Home Assignment 5/Code/LunarLanderDQN2025Assignment.ipynb
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -843,6 +843,17 @@
       "initial state: [-0.00539989  1.4050679  -0.5469643  -0.26011088  0.0062639   0.1238956\n",
       "  0.          0.        ]\n",
       "reward: 209.28077355184206\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
