--- a/Home Assignment 5/Code/LunarLanderDQN2025AssignmentTargetQN.ipynb
+++ b/Home Assignment 5/Code/LunarLanderDQN2025AssignmentTargetQN.ipynb
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -854,6 +854,17 @@
       "initial state: [-0.00430498  1.4099395  -0.436064   -0.04358765  0.0049952   0.09877495\n",
       "  0.          0.        ]\n",
       "reward: 273.38600920969657\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
