Meh solutions to ex 2

--- a/Home Assignment 5/OReL HA5 Davide Marchi.tex
+++ b/Home Assignment 5/OReL HA5 Davide Marchi.tex
@@ -63,7 +63,7 @@
 \input{1.tex}
 
 \section{A tighter analysis of the Hedge algorithm}
-%\input{2.tex}
+\input{2.tex}
 
 \section{Empirical evaluation of algorithms for adversarial environments}
 %\input{3.tex}
