--- a/Home Assignment 5/OReL HA5 Davide Marchi.tex
+++ b/Home Assignment 5/OReL HA5 Davide Marchi.tex
@@ -69,7 +69,7 @@
 \input{3.tex}
 
 \section{Empirical comparison of UCB1 and EXP3 algorithms }
-%\input{4.tex}
+\input{4.tex}
 
     
 \bibliography{bibliography}  % If you have some references, use BibTeX
