--- a/Home Assignment 5/OReL HA5 Davide Marchi.tex
+++ b/Home Assignment 5/OReL HA5 Davide Marchi.tex
@@ -62,8 +62,8 @@
 \section{Deep Q-Learning}
 \input{1.tex}
 
-\section{A tighter analysis of the Hedge algorithm TODO}
-%\input{2.tex}
+\section{A tighter analysis of the Hedge algorithm}
+\input{2.tex}
 
 \section{Empirical evaluation of algorithms for adversarial environments}
 \input{3.tex}
